--- a/Homepage.html
+++ b/Homepage.html
@@ -24,6 +24,24 @@
           >
         </button>
       </div>
+      <div class="hamburger-menu">
+        <div class="hambar bar1"></div>
+        <div class="hambar bar2"></div>
+        <div class="hambar bar3"></div>
+      </div>
+      <div class="off-screen-menu">
+        <ul class="Links2">
+          <li class="nav"><a href="#">Marketplace</a></li>
+          <li class="nav"><a href="#">Rankings</a></li>
+          <li class="nav"><a href="#">Connect a wallet</a></li>
+        </ul>
+        <button class="header-button">
+          <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
+            >Sign up</a
+          >
+        </button>
+        </div>
+      </div>
     </header>
     <section class="top-homepage">
       <div class="left-homepage">
@@ -63,29 +81,29 @@
         </div>
       </div>
     </section>
-    <section class="Trending-collection">
+    <section class="Trending-collection nopad">
       <h1>Trending Collection</h1>
       <p>Checkout Our Weekly Updated Trending Collection.</p>
       <div class="Collection">
         <div class="all">
-          <img src="images/Dog-with glass.svg" alt="" />
+          <img class="big" src="images/Dog-with glass.svg" alt="" />
           <div class="below-all">
-            <img src="images/dog-one.svg" alt="" />
-            <img src="images/dog-two.svg" alt="" />
-            <img src="images/dog-3.svg" alt="" />
+            <img class="dog" src="images/dog-one.svg" alt="" />
+            <img class="dog" src="images/dog-two.svg" alt="" />
+            <img class="dog" src="images/dog-3.svg" alt="" />
           </div>
           <p>DSGN Animals</p>
           <div class="account-owner">
-            <img src="images/Mr fox ico.svg" alt="" />
+            <img  src="images/Mr fox ico.svg" alt="" />
             <p>Mrfox</p>
           </div>
         </div>
         <div class="all">
-          <img src="images/Small Mushroom.svg" alt="" />
+          <img class="big" src="images/Small Mushroom.svg" alt="" />
           <div class="below-all">
-            <img src="images/Mushroom-one.svg" alt="" />
-            <img src="images/Mushroom-two.svg" alt="" />
-            <img src="images/dog-3.svg" alt="" />
+            <img class="dog" src="images/Mushroom-one.svg" alt="" />
+            <img class="dog" src="images/Mushroom-two.svg" alt="" />
+            <img class="dog" src="images/dog-3.svg" alt="" />
           </div>
           <p>Magic Mushrooms</p>
           <div class="account-owner">
@@ -93,22 +111,9 @@
             <p>Shroomie</p>
           </div>
         </div>
-        <div class="all">
-          <img src="images/Small Robot.svg" alt="" />
-          <div class="below-all">
-            <img src="images/Robot-one.svg" alt="" />
-            <img src="images/Robot-two.svg" alt="" />
-            <img src="images/dog-3.svg" alt="" />
-          </div>
-          <p>Disco Machines</p>
-          <div class="account-owner">
-            <img src="images/BeKind2Robots.svg" alt="" />
-            <p>BeKind2Robots</p>
-          </div>
-        </div>
       </div>
     </section>
-    <section class="Trending-collection">
+    <section class="Top-creators">
       <h1>Top Creators</h1>
       <div class="rankings">
         <p>Checkout Top Rated Creators on the NFT Marketplace</p>
@@ -272,7 +277,7 @@
         </div>
       </div>
     </section>
-    <section class="Trending-collection">
+    <section class="Top-creators">
       <h1>Discover More NFTs</h1>
       <div class="rankings">
         <p>Explore new trending NFTs</p>
@@ -377,27 +382,32 @@
       <div class="all-Method">
         <div class="Method">
           <img src="images/Wallet-one.svg" alt="" />
-          <h4>Setup Your Wallet</h4>
+          <div class="break">
+            <h4>Setup Your Wallet</h4>
           <p>
             Set up your wallet of choice. Connect it to the Animarket by
             clicking the wallet icon in the top right corner.
           </p>
+          </div>
         </div>
         <div class="Method">
           <img src="images/Wallet-two.svg" alt="" />
-          <h4>Create Collection</h4>
+          <div class="break">
+            <h4>Create Collection</h4>
           <p>
-            Upload your work and setup your collection. Add a description,
-            social links and floor price.
+            Upload your work and setup your collection. Add a description, social links and floor price.
           </p>
+          </div>
         </div>
         <div class="Method">
           <img src="images/Wallet-Three.svg" alt="" />
-          <h4>Start Earning</h4>
+          <div class="break">
+            <h4>Start Earning</h4>
           <p>
             Choose between auctions and fixed-price listings. Start earning by
             selling your NFTs or trading others.
           </p>
+          </div>
         </div>
       </div>
     </section>
