--- a/Homepage.html
+++ b/Homepage.html
@@ -111,6 +111,19 @@
             <p>Shroomie</p>
           </div>
         </div>
+        <div id="hidden-robot" class="all">
+          <img class="big" src="images/Small Robot.svg" alt="" />
+          <div class="below-all">
+            <img class="dog" src="images/Robot-one.svg" alt="" />
+            <img class="dog" src="images/Robot-two.svg" alt="" />
+            <img class="dog" src="images/dog-3.svg" alt="" />
+          </div>
+          <p>Disco Machines</p>
+          <div class="account-owner">
+            <img src="images/BeKind2Robots.svg" alt="" />
+            <p>BeKind2Robots</p>
+          </div>
+        </div>
       </div>
     </section>
     <section class="Top-creators">
