--- a/Homepage.html
+++ b/Homepage.html
@@ -53,7 +53,7 @@
         </p>
         <button>
           <img src="images/RocketLaunch icon.svg" alt="" />
-          <a href="#">Get started</a>
+          Get started
         </button>
         <div class="All-Customers">
           <div class="rate">
