--- a/Homepage.html
+++ b/Homepage.html
@@ -14,7 +14,7 @@
       </div>
       <div class="nav-links">
         <ul class="links">
-          <li><a href="#">Marketplace</a></li>
+          <li><a href="Marketplace.html">Marketplace</a></li>
           <li><a href="#">Rankings</a></li>
           <li><a href="#">Connect a wallet</a></li>
         </ul>
