--- a/Homepage.html
+++ b/Homepage.html
@@ -20,7 +20,7 @@
         </ul>
         <button class="header-button">
           <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
-            >Sign up</a
+            >Sign out</a
           >
         </button>
       </div>
@@ -31,13 +31,13 @@
       </div>
       <div class="off-screen-menu">
         <ul class="Links2">
-          <li class="nav"><a href="#">Marketplace</a></li>
+          <li class="nav"><a href="Marketplace.html">Marketplace</a></li>
           <li class="nav"><a href="#">Rankings</a></li>
           <li class="nav"><a href="#">Connect a wallet</a></li>
         </ul>
         <button class="header-button">
           <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
-            >Sign up</a
+            >Sign out</a
           >
         </button>
         </div>
