--- a/Marketplace.html
+++ b/Marketplace.html
@@ -15,13 +15,13 @@
       </div>
       <div class="nav-links">
         <ul class="links">
-          <li><a href="Marketplace.html">Marketplace</a></li>
+          <li><a href="Homepage.html">Homepage</a></li>
           <li><a href="#">Rankings</a></li>
           <li><a href="#">Connect a wallet</a></li>
         </ul>
-        <button class="header-button">
-          <img src="images/The-User in Sign up Button.svg" alt="" /><a id="hidden" href="index.html"
-            >Sign up</a
+        <button class="header-button var">
+          <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
+            >Sign out</a
           >
         </button>
       </div>
@@ -32,13 +32,13 @@
       </div>
       <div class="off-screen-menu">
         <ul class="Links2">
-          <li class="nav"><a href="#">Marketplace</a></li>
+          <li class="nav"><a href="Homepage.html">Homepage</a></li>
           <li class="nav"><a href="#">Rankings</a></li>
           <li class="nav"><a href="#">Connect a wallet</a></li>
         </ul>
-        <button class="header-button">
-          <img src="images/The-User in Sign up Button.svg" alt="" /><a href="index.html"
-            >Sign up</a
+        <button class="header-button var">
+          <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
+            >Sign out</a
           >
         </button>
         </div>
@@ -55,17 +55,17 @@
     <hr>
     <section class="all-collection">
       <div class="top-all-collection">
-        <div class="left-all-collection">
+        <div onclick="showCollection()" class="left-all-collection">
           <h1>NFTs</h1>
           <p>302</p>
         </div>
-        <div class="right-all-collection">
+        <div onclick="hideCollection()" class="right-all-collection">
           <h1>Collections</h1>
           <p>87</p>
         </div>
       </div>
       <div class="spacing">
-        <div class="NFTs cards">
+        <div class="NFTs cards zap">
           <img src="images/NFTs-1.svg" alt="" />
           <h4>Magic Mushroom</h4>
           <div class="owner">
@@ -83,7 +83,7 @@
             </div>
           </div>
         </div>
-        <div class="NFTs cards">
+        <div class="NFTs cards zap">
           <img src="images/NFTs-2.svg" alt="" />
           <h4>Happy Robot 032</h4>
           <div class="owner">
@@ -101,7 +101,7 @@
             </div>
           </div>
         </div>
-        <div class="NFTs cards">
+        <div class="NFTs cards zap">
           <img src="images/NFTs-3.svg" alt="" />
           <h4>Happy Robot 024</h4>
           <div class="owner">
@@ -137,7 +137,7 @@
             </div>
           </div>
         </div>
-        <div class="NFTs cards">
+        <div class="NFTs cards zap">
           <img src="images/NFTs-5.svg" alt="" />
           <h4>Colorful Dog</h4>
           <div class="owner">
@@ -245,7 +245,7 @@
             </div>
           </div>
         </div>
-        <div class="NFTs cards">
+        <div class="NFTs cards zap">
           <img src="images/NFTs-11.svg" alt="" />
           <h4>IceCream Ape 0324</h4>
           <div class="owner">
@@ -263,7 +263,7 @@
             </div>
           </div>
         </div>
-        <div class="NFTs cards">
+        <div class="NFTs cards zap">
           <img src="images/NFTs-12.svg" alt="" />
           <h4>Colourful Dog 0344</h4>
           <div class="owner">
