--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       </div>
       <div class="nav-links">
         <ul class="links">
-          <li><a href="#">Marketplace</a></li>
-          <li><a href="#">Rankings</a></li>
-          <li><a href="#">Connect a wallet</a></li>
+          <li class="li"><a href="#">Marketplace</a></li>
+          <li class="li"><a href="#">Rankings</a></li>
+          <li class="li"><a href="#">Connect a wallet</a></li>
         </ul>
         <button class="header-button">
           <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
@@ -31,9 +31,9 @@
       </div>
       <div class="off-screen-menu">
         <ul class="Links2">
-          <li class="nav"><a href="#">Marketplace</a></li>
-          <li class="nav"><a href="#">Rankings</a></li>
-          <li class="nav"><a href="#">Connect a wallet</a></li>
+          <li class="nav li"><a href="#">Marketplace</a></li>
+          <li class="nav li"><a href="#">Rankings</a></li>
+          <li class="nav li"><a href="#">Connect a wallet</a></li>
         </ul>
         <button class="header-button">
           <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
