--- a/Homepage.html
+++ b/Homepage.html
@@ -15,10 +15,10 @@
       <div class="nav-links">
         <ul class="links">
           <li><a href="Marketplace.html">Marketplace</a></li>
-          <li><a href="#">Rankings</a></li>
+          <li><a href="Ranking.html">Rankings</a></li>
           <li><a href="#">Connect a wallet</a></li>
         </ul>
-        <button class="header-button">
+        <button class="header-button" onclick="logout()">
           <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
             >Sign out</a
           >
@@ -32,10 +32,10 @@
       <div class="off-screen-menu">
         <ul class="Links2">
           <li class="nav"><a href="Marketplace.html">Marketplace</a></li>
-          <li class="nav"><a href="#">Rankings</a></li>
+          <li class="nav"><a href="Ranking.html">Rankings</a></li>
           <li class="nav"><a href="#">Connect a wallet</a></li>
         </ul>
-        <button class="header-button">
+        <button class="header-button" onclick="logout()">
           <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
             >Sign out</a
           >
