--- a/Marketplace.html
+++ b/Marketplace.html
@@ -16,10 +16,10 @@
       <div class="nav-links">
         <ul class="links">
           <li><a href="Homepage.html">Homepage</a></li>
-          <li><a href="#">Rankings</a></li>
+          <li><a href="Ranking.html">Rankings</a></li>
           <li><a href="#">Connect a wallet</a></li>
         </ul>
-        <button class="header-button var">
+        <button class="header-button var" onclick="logout()">
           <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
             >Sign out</a
           >
@@ -36,7 +36,7 @@
           <li class="nav"><a href="#">Rankings</a></li>
           <li class="nav"><a href="#">Connect a wallet</a></li>
         </ul>
-        <button class="header-button var">
+        <button class="header-button var" onclick="logout()">
           <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
             >Sign out</a
           >
