--- a/index.html
+++ b/index.html
@@ -119,5 +119,6 @@
       <p>&#169;NFT Market. Use this template freely.</p>
     </footer>
     <script src="app.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
