--- a/Homepage.html
+++ b/Homepage.html
@@ -33,7 +33,7 @@
           <li class="nav"><a href="Marketplace.html">Marketplace</a></li>
           <li class="nav"><a href="Ranking.html">Rankings</a></li>
         </ul>
-        <button class="header-button" onclick="logout()">
+        <button class="header-button nav" onclick="logout()">
           <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
             >Sign out</a
           >
