--- a/Marketplace.html
+++ b/Marketplace.html
@@ -34,7 +34,7 @@
           <li class="nav"><a href="Homepage.html">Homepage</a></li>
           <li class="nav"><a href="#">Rankings</a></li>
         </ul>
-        <button class="header-button var" onclick="logout()">
+        <button class="header-button nav" onclick="logout()">
           <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
             >Sign out</a
           >
@@ -300,8 +300,8 @@
         <div class="Explore">
           <h1>Explore</h1>
           <ul>
-            <li><a href="#">MarketPlace</a></li>
-            <li><a href="#">Rankings</a></li>
+            <li><a href="Homepage.html">Homepage</a></li>
+            <li><a href="Ranking.html">Rankings</a></li>
           </ul>
         </div>
         <div class="Explore">
