--- a/Ranking.html
+++ b/Ranking.html
@@ -34,7 +34,7 @@
           <li class="nav"><a href="Homepage.html">Homepage</a></li>
           <li class="nav"><a href="#">Rankings</a></li>
         </ul>
-        <button class="header-button var" onclick="logout()">
+        <button class="header-button nav" onclick="logout()">
           <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
             >Sign out</a
           >
@@ -440,8 +440,8 @@
           <div class="Explore">
             <h1>Explore</h1>
             <ul>
-              <li><a href="#">MarketPlace</a></li>
-              <li><a href="#">Rankings</a></li>
+              <li><a href="Homepage.html">Homepage</a></li>
+              <li><a href="#">Marketplace</a></li>
             </ul>
           </div>
           <div class="Explore">
