--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li class="nav li"><a href="#">Marketplace</a></li>
           <li class="nav li"><a href="#">Rankings</a></li>
         </ul>
-        <button class="header-button">
+        <button class="header-button nav">
           <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
             >Sign up</a
           >
@@ -99,8 +99,8 @@
         <div class="Explore">
           <h1>Explore</h1>
           <ul>
-            <li><a href="#">MarketPlace</a></li>
-            <li><a href="#">Rankings</a></li>
+            <li class="li"><a href="#">MarketPlace</a></li>
+            <li class="li"><a href="#">Rankings</a></li>
           </ul>
         </div>
         <div class="Explore">
