--- a/Ranking.html
+++ b/Ranking.html
@@ -6,7 +6,7 @@
     <title>NFT MarketPlace</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/Homepage.css" />
-    <link rel="stylesheet" href="css/ranking.css">
+    <link rel="stylesheet" href="css/ranking.css" />
   </head>
   <body>
     <header>
@@ -18,7 +18,7 @@
           <li><a href="Homepage.html">Homepage</a></li>
           <li><a href="Marketplace.html">Marketplace</a></li>
         </ul>
-        <button class="header-button var" onclick="logout()">
+        <button class="header-button var" id="logout">
           <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
             >Sign out</a
           >
@@ -34,18 +34,17 @@
           <li class="nav"><a href="Homepage.html">Homepage</a></li>
           <li class="nav"><a href="#">Rankings</a></li>
         </ul>
-        <button class="header-button nav" onclick="logout()">
+        <button class="header-button nav" id="logout">
           <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
             >Sign out</a
           >
         </button>
-        </div>
       </div>
     </header>
     <section class="top-head-ranking">
-        <h1>Top Creators</h1>
-        <p>Check out top ranking NFT artists on the NFT Marketplace.</p>
-    </section>  
+      <h1>Top Creators</h1>
+      <p>Check out top ranking NFT artists on the NFT Marketplace.</p>
+    </section>
     <section class="all-ranking">
       <div class="top-all-ranking">
         <div onclick="showRankOne()" class="rankin rank-one">
@@ -141,11 +140,11 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+8.41%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>551</p>
-            </div>
+          </div>
         </div>
         <div class="card">
           <img id="number" src="images/Six.svg" alt="" />
@@ -158,12 +157,12 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+8.35%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>545</p>
-            </div>
-            </div>
+          </div>
+        </div>
         <div class="card">
           <img id="number" src="images/Seven.svg" alt="" />
           <img id="image" src="images/Seven-image.svg" alt="" />
@@ -175,11 +174,11 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+8.21%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>540</p>
-            </div>
+          </div>
         </div>
         <div class="card">
           <img id="number" src="images/Eight.svg" alt="" />
@@ -192,11 +191,11 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+8.11%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>535</p>
-            </div>
+          </div>
         </div>
         <div class="card">
           <img id="number" src="images/Nine.svg" alt="" />
@@ -209,11 +208,11 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+8.01%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>530</p>
-            </div>
+          </div>
         </div>
         <div class="card">
           <img id="number" src="images/Ten.svg" alt="" />
@@ -226,11 +225,11 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+7.91%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>525</p>
-            </div>
+          </div>
         </div>
         <div class="card">
           <img id="number" src="images/Eleven.svg" alt="" />
@@ -243,11 +242,11 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+7.81%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>520</p>
-            </div>
+          </div>
         </div>
         <div class="card">
           <img id="number" src="images/Twelve.svg" alt="" />
@@ -260,12 +259,12 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+7.71%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>515</p>
-            </div>
           </div>
+        </div>
         <div class="card">
           <img id="number" src="images/Thirteen.svg" alt="" />
           <img id="image" src="images/Puppypower.svg" alt="" />
@@ -277,11 +276,11 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+7.61%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>510</p>
-            </div>
+          </div>
         </div>
         <div class="card">
           <img id="number" src="images/Fourteen.svg" alt="" />
@@ -294,11 +293,11 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+7.51%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>505</p>
-            </div>
+          </div>
         </div>
         <div class="card">
           <img id="number" src="images/fifteen.svg" alt="" />
@@ -311,11 +310,11 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+7.41%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>500</p>
-            </div>
+          </div>
         </div>
         <div class="card">
           <img id="number" src="images/Sixteen.svg" alt="" />
@@ -328,11 +327,11 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+7.31%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>495</p>
-            </div>
+          </div>
         </div>
         <div class="card">
           <img id="number" src="images/seventeen.svg" alt="" />
@@ -345,11 +344,11 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+7.21%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>490</p>
-            </div>
+          </div>
         </div>
         <div class="card">
           <img id="number" src="images/eighteen.svg" alt="" />
@@ -362,11 +361,11 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+7.11%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>485</p>
-            </div>
+          </div>
         </div>
         <div class="card">
           <img id="number" src="images/nineteen.svg" alt="" />
@@ -379,11 +378,11 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+7.01%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>480</p>
-            </div>
+          </div>
         </div>
         <div class="card">
           <img id="number" src="images/twenty.svg" alt="" />
@@ -396,11 +395,11 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+6.91%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>475</p>
-            </div>
+          </div>
         </div>
         <div class="card fr">
           <img id="number" src="images/Twenty-one.svg" alt="" />
@@ -413,53 +412,113 @@
           <div class="txt-e">
             <h5>Change:</h5>
             <p>+6.81%</p>
-            </div>
+          </div>
           <div class="txt-e txt">
             <h5>NFTs Sold:</h5>
             <p>470</p>
-            </div>
+          </div>
         </div>
       </div>
-      </section>
-      <footer>
-        <div class="top-footer">
-          <div class="icons-prt">
-            <img src="images/The-Logo.svg" alt="" />
-            <p>
-              NFT marketplace UI created <br />
-              with Anima for Figma.
-            </p>
-            <p>Join our community</p>
-            <div class="icon">
-              <img src="images/DiscordLogo.svg" alt="" />
-              <img src="images/YoutubeLogo.svg" alt="" />
-              <img src="images/TwitterLogo.svg" alt="" />
-              <img src="images/InstagramLogo.svg" alt="" />
-            </div>
-          </div>
-          <div class="Explore">
-            <h1>Explore</h1>
-            <ul>
-              <li><a href="Homepage.html">Homepage</a></li>
-              <li><a href="#">Marketplace</a></li>
-            </ul>
-          </div>
-          <div class="Explore">
-            <h1>Join Our Weekly Digest</h1>
-            <p>
-              Get exclusive promotions & updates <br />
-              straight to your inbox.
-            </p>
-            <div class="Send-msg">
-              <input type="text" placeholder="Enter your email here" />
-              <button>Subscribe</button>
-            </div>
+    </section>
+    <footer>
+      <div class="top-footer">
+        <div class="icons-prt">
+          <img src="images/The-Logo.svg" alt="" />
+          <p>
+            NFT marketplace UI created <br />
+            with Anima for Figma.
+          </p>
+          <p>Join our community</p>
+          <div class="icon">
+            <img src="images/DiscordLogo.svg" alt="" />
+            <img src="images/YoutubeLogo.svg" alt="" />
+            <img src="images/TwitterLogo.svg" alt="" />
+            <img src="images/InstagramLogo.svg" alt="" />
           </div>
         </div>
-        <hr />
-        <p>&#169;NFT Market. Use this template freely.</p>
-      </footer>
-    <script src="app.js"></script>
+        <div class="Explore">
+          <h1>Explore</h1>
+          <ul>
+            <li><a href="Homepage.html">Homepage</a></li>
+            <li><a href="#">Marketplace</a></li>
+          </ul>
+        </div>
+        <div class="Explore">
+          <h1>Join Our Weekly Digest</h1>
+          <p>
+            Get exclusive promotions & updates <br />
+            straight to your inbox.
+          </p>
+          <div class="Send-msg">
+            <input type="text" placeholder="Enter your email here" />
+            <button>Subscribe</button>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <p>&#169;NFT Market. Use this template freely.</p>
+    </footer>
     <script src="script.js"></script>
+    <script type="module" src="app.js"></script>
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js";
+      import {
+        createUserWithEmailAndPassword,
+        getAuth,
+        onAuthStateChanged,
+        signInWithEmailAndPassword,
+        signOut,
+      } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-auth.js";
+
+      const firebaseConfig = {
+        apiKey: "AIzaSyB1bIJfE6ZW681t0Wm5sgSOjQ7fjtYRmPk",
+        authDomain: "nft-marketplace-14988.firebaseapp.com",
+        projectId: "nft-marketplace-14988",
+        storageBucket: "nft-marketplace-14988.appspot.com",
+        messagingSenderId: "937151858021",
+        appId: "1:937151858021:web:98ff38202edb4f6dc04d8c",
+      };
+
+      const app = initializeApp(firebaseConfig);
+      const auth = getAuth(app);
+
+      // Sign Out
+      const signOutBtns = document.querySelectorAll("#logout"); // Multiple buttons
+      signOutBtns.forEach((btn) => {
+        btn.addEventListener("click", async () => {
+          console.log("Signing out...");
+          try {
+            const result = await Swal.fire({
+              title: "Are you sure?",
+              text: "You are about to sign out!",
+              icon: "warning",
+              showCancelButton: true,
+              confirmButtonColor: "#3085d6",
+              cancelButtonColor: "#d33",
+              confirmButtonText: "Yes, sign out!",
+            });
+
+            if (result.isConfirmed) {
+              await signOut(auth);
+              Swal.fire({
+                title: "Signed Out!",
+                text: "You have successfully signed out!",
+                icon: "success",
+              }).then(() => {
+                window.location.href = "signin.html";
+              });
+            }
+          } catch (error) {
+            Swal.fire({
+              position: "top-end",
+              icon: "error",
+              title: error.message,
+              showConfirmButton: false,
+              timer: 1500,
+            });
+          }
+        });
+      });
+    </script>
   </body>
 </html>
