--- a/signin.html
+++ b/signin.html
@@ -16,11 +16,10 @@
           <li class="li"><a href="#">Marketplace</a></li>
           <li class="li"><a href="#">Rankings</a></li>
         </ul>
-        <button class="header-button">
-          <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
-            >Sign up</a
-          >
-        </button>
+        <a href="index.html" class="header-button">
+          <img src="images/The-User in Sign up Button.svg" alt="" />
+          <p>Sign Up</p>
+        </a>
       </div>
       <div class="hamburger-menu">
         <div class="hambar bar1"></div>
@@ -32,11 +31,10 @@
           <li class="nav li"><a href="#">Marketplace</a></li>
           <li class="nav li"><a href="#">Rankings</a></li>
         </ul>
-        <button class="header-button nav">
-          <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
-            >Sign up</a
-          >
-        </button>
+        <a href="index.html" class="header-button nav">
+          <img src="images/The-User in Sign up Button.svg" alt="" />
+          <p>Sign Up</p>
+        </a>
       </div>
     </header>
     <section class="The-Sign-up-body">
@@ -113,6 +111,7 @@
     </footer>
     <script src="script.js"></script>
     <script type="module" src="app.js"></script>
+    <script src="real.js"></script>
     <script type="module">
       import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js";
       import {
