--- a/Homepage.html
+++ b/Homepage.html
@@ -457,8 +457,8 @@
         <div class="Explore">
           <h1>Explore</h1>
           <ul>
-            <li><a href="#">MarketPlace</a></li>
-            <li><a href="#">Rankings</a></li>
+            <li><a href="Marketplace.html">MarketPlace</a></li>
+            <li><a href="Ranking.html">Rankings</a></li>
           </ul>
         </div>
         <div class="Explore">
@@ -478,6 +478,7 @@
     </footer>
     <script type="module" src="app.js"></script>
     <script src="script.js"></script>
+    <script src="real.js"></script>
     <script type="module">
       import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js";
       import {
