--- a/Ranking.html
+++ b/Ranking.html
@@ -32,7 +32,7 @@
       <div class="off-screen-menu">
         <ul class="Links2">
           <li class="nav"><a href="Homepage.html">Homepage</a></li>
-          <li class="nav"><a href="#">Rankings</a></li>
+          <li class="nav"><a href="Marketplace.html">Marketplace</a></li>
         </ul>
         <button class="header-button nav" id="logout">
           <img src="images/The-User in Sign up Button.svg" alt="" /><a href="#"
@@ -460,6 +460,7 @@
     </footer>
     <script src="script.js"></script>
     <script type="module" src="app.js"></script>
+    <script src="real.js"></script>
     <script type="module">
       import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js";
       import {
